<resources>
    <string name="app_name">instaZeynep</string>
    <string name="name">Name</string>
    <string name="log_in">LOG IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="create">CREATE</string>
    <string name="refresh">REFRESH</string>
    <string name="enter_a_description">enter a description</string>
    <string name="sign_up">SIGN UP</string>
    <string name="todo">TODO</string>
    <string name="log_out">LOG OUT</string>
    <string name="home">Home</string>
    <string name="button">Button</string>
    <string name="take_pic">TAKE PIC</string>
    <string name="profile">Profile</string>
    <string name="compose">Compose</string>
    <string name="hipster_attempt">hipster attempt</string>
    <string name="timestamp">TimeStamp</string>
    <string name="action_dm">DirectMessage</string>
    <string name="textview" />
    <string name="post">POST</string>
</resources>
